@@ -1,44 +1,63 @@
 package models;
 
+import models.records.Alignment;
+import models.records.Tuple;
+
 import java.util.*;
 
 import static main.Main.*;
 
 public class Segmentation {
-
+    public int[] eventIndexes;
     public ArrayList<ArrayList<Alignment>> generateTable(IntervalTree tree) {
+        System.out.println("==========================================================");
+        System.out.println("Starting to generate computation Table");
+        long startTime = System.currentTimeMillis();
 
         ArrayList<IntervalNode> nodes = tree.traversal();
-        ArrayList<Alignment>[] tabs = new ArrayList[tree.getMaxEndValue() + 1];
+        int maxEnd = tree.getMaxEndValue();
+        ArrayList<Alignment>[] tabs = new ArrayList[maxEnd + 1];
         for (IntervalNode n : nodes) {
-
-            for(int i=n.interval.qstart(); i < n.interval.qend()+1; i++) {
+            for(int i=n.alignment.qstart(); i < n.alignment.qend()+1; i++) {
                 if (tabs[i] != null ) {
-                    tabs[i].add(n.interval);
+                    tabs[i].add(n.alignment);
                 }
                 else {
-                    tabs[i] = new ArrayList<>(Arrays.asList(n.interval));
-                }
-            }
-        }
-        for(int i = 0; i < tabs.length; i++) {
-            if(tabs[i] != null && tabs[i].size() == 1) {
-                if(tabs[i].get(0).qstart() != i ||tabs[i].get(0).qend() != i ) {
-                    tabs[i] = null;
+                    tabs[i] = new ArrayList<>(List.of(n.alignment));
                 }
             }
         }
 
-        ArrayList<ArrayList<Alignment>> ret = new ArrayList<>(Arrays.asList(tabs));
-        ret.removeAll(Collections.singleton(null));
+        ArrayList<ArrayList<Alignment>> tabsList =  new ArrayList<>(Arrays.asList(tabs));
+        tabsList.removeAll(Collections.singleton(null));
+        List<ArrayList<Alignment>> list = new ArrayList<>();
+        for (int i = 0; i < tabsList.size(); i++) {
+            if (i == 0) {
+                list.add(tabsList.get(i));
+            }
+            else if (tabsList.get(i) != null  && !tabsList.get(i-1).equals(tabsList.get(i))){
+                list.add(tabsList.get(i));
+            }
+        }
 
-        return ret;
+        list.removeAll(Collections.singleton(null));
+
+        long endTime = System.currentTimeMillis();
+
+        long timeElapsed = endTime - startTime;
+        System.out.println("Took " + timeElapsed + " ms");
+
+        return new ArrayList<>(list);
+
 
     }
 
-    public HashMap<String, float[]> generateDPTable(ArrayList<ArrayList<Alignment>> alignments) {
+    public HashMap<String, Tuple> generateDPTable(ArrayList<ArrayList<Alignment>> alignments) {
+        System.out.println("==========================================================");
+        System.out.println("Starting to generate Dynamic Table");
+        long startTime = System.currentTimeMillis();
 
-        HashMap<String, float[]> dp = new HashMap<>();
+        HashMap<String, Tuple> dp = new HashMap<>();
         HashMap<String, Float> emission = new HashMap<>();
 
         float [] init = new float[alignments.size()];
@@ -57,85 +76,130 @@ public class Segmentation {
             }
         }
 
-        for (String key: emission.keySet()) {
-            emission.put(key, emission.get(key) / alignments.size());
-        }
+        emission.replaceAll((k, v) -> emission.get(k) / alignments.size());
 
 
-
+        eventIndexes = new int[alignments.size()];
         for(int i = 0; i < alignments.size(); i++) {
-            ArrayList<Alignment> M = alignments.get(i);
-
-           // initialise the first column
-            if (i == 0) {
-                int maxM = 0;
-                for(int m = 0; m < M.size(); m++) {
-                    dp.put(M.get(m).sseqid(), init.clone());
-
-                    if (M.get(i).bitscore() > M.get(maxM).bitscore()) {
-                        maxM = m;
-                    }
-                }
-                dp.get(M.get(maxM).sseqid())[0] = 1;
-                continue;
+            ArrayList<Alignment> M = (ArrayList<Alignment>) alignments.get(i).clone();
+            int nextStart = M.get(0).qend();
+            int thisStart = M.get(0).qstart();
+            if (i < alignments.size()-1) {
+                nextStart = getNextStartFromList(M, (ArrayList<Alignment>) alignments.get(i + 1).clone());
             }
 
-            for(int m = 0; m < M.size(); m++) {
+            if (i > 1) {
+                thisStart = eventIndexes[i-1];
+            }
+            eventIndexes[i] = nextStart;
 
-                dp.putIfAbsent(M.get(m).sseqid(), init.clone());
 
-                float vi = emission.get(M.get(m).sseqid()) * getMaxScore(alignments.get(i-1), i-1, dp, M.get(m));
-                float[] mScores = dp.get(M.get(m).sseqid());
+            if (i > 0 ) {
+                M.addAll(alignments.get(i - 1));
+            }
+
+
+            for (Alignment alignment : M) {
+
+                // Initialise first column
+                if (i == 0) {
+                    dp.put(alignment.sseqid(), new Tuple(alignment, init.clone()));
+                    continue;
+                }
+                dp.putIfAbsent(alignment.sseqid(), new Tuple(alignment, init.clone()));
+
+                float vi = emission.get(alignment.sseqid()) * getMaxScore(alignments.get(i - 1), i - 1, dp, alignment, nextStart-thisStart);
+                float[] mScores = dp.get(alignment.sseqid()).score();
                 mScores[i] = vi;
-                dp.put(M.get(m).sseqid(), mScores);
+                dp.put(alignment.sseqid(), new Tuple(alignment, mScores));
 
             }
         }
 
+        long endTime = System.currentTimeMillis();
+
+        long timeElapsed = endTime - startTime;
+        System.out.println("Took " + timeElapsed + " ms");
         return dp;
     }
 
+    private int getNextStartFromList(ArrayList<Alignment> current ,ArrayList<Alignment> next) {
+        ArrayList<Alignment> newStarts = (ArrayList<Alignment>) next.clone();
+        newStarts.removeAll(current);
+        if (newStarts.size() == 0){
+            ArrayList<Alignment> newEnds = (ArrayList<Alignment>) current.clone();
+            newEnds.removeAll(next);
+            if (newEnds.size() == 0) {
+                return next.get(0).qstart();
+            }
+            return  newEnds.get(0).qend();
+        }
+        return newStarts.get(0).qstart();
+    }
 
-    public ArrayList<String> traceback(HashMap<String, float[]> matrix) {
-        List<float[]> matrix_scores = matrix.values().stream().toList();
-        ArrayList<String> traceback = new ArrayList<>();
+
+    public ArrayList<Alignment> traceback(HashMap<String, Tuple> matrix) {
+
+        System.out.println("==========================================================");
+        System.out.println("Starting traceback");
+        long startTime = System.currentTimeMillis();
+
+        List<float[]> matrix_scores = matrix.values().stream().map(Tuple::score).toList();
+        ArrayList<Alignment> traceback = new ArrayList<>();
         String[] keys = matrix.keySet().toArray(new String[0]);
-        float maxValue = 0;
+
         int endIndex = matrix_scores.get(0).length-1;
 
-        for (int i = endIndex; i > 0; i--) {
-            maxValue = 0;
-            String maxTax = keys[0];
+
+        Tuple maxTax = matrix.get(keys[0]);
+        float maxValue = 0;
+
+        for (int i = endIndex; i >= 0; i--) {
             for(int j = 0; j < matrix_scores.size() ; j++) {
-                if (maxValue <  matrix_scores.get(j)[i]) {
+                if (maxValue <=  matrix_scores.get(j)[i]) {
                     maxValue =  matrix_scores.get(j)[i];
-                    maxTax = keys[j];
+                    maxTax = matrix.get(keys[j]);
                 }
             }
-            traceback.add(maxTax);
+            traceback.add(maxTax.alignment());
         }
+
+        long endTime = System.currentTimeMillis();
+
+        long timeElapsed = endTime - startTime;
+        System.out.println("Took " + timeElapsed + " ms");
+
         return traceback;
     }
 
-    private float getMaxScore(ArrayList<Alignment> Mi, int w , HashMap<String, float[]> dp, Alignment current ) {
+    private float getMaxScore(ArrayList<Alignment> Mi, int w , HashMap<String, Tuple> dp, Alignment current, int length ) {
         float max = 0;
         for (Alignment a : Mi
              ) {
-            float score = computeScore(a, current);
-
-                max = Math.max(max, dp.get(a.sseqid())[w] + score);
+            float previousScore = dp.get(a.sseqid()).score()[w];
+            float score = computeScore(a, current, previousScore, length);
+            max = Math.max(max, previousScore + score);
 
         }
         return max;
 
     }
 
-    private float computeScore(Alignment prev, Alignment current) {
+    private float computeScore(Alignment prev, Alignment current,  float previousScore, int length) {
         if (prev.equals(current)) {
-            return match;
+            gapLength = 0;
+            return match * length;
         }
         else {
-            return Math.max(mismatch, gapPenalty*gapLength);
+            if (previousScore -mismatch * length > previousScore - gapPenalty*gapLength) {
+                gapLength = 0;
+                return -mismatch * length;
+            } else {
+
+                float pen = gapPenalty * gapLength;
+                gapLength += length;
+                return -pen;
+            }
         }
     }
 
